client/src/pages/post.scss
@use "../css/variables.scss" as *;

.post {

  &__nav-list {
    display: flex;
    height: 2rem;
    align-items: center;
    justify-content: space-between;
    list-style: none;
    padding: 0;
    margin: 0.5rem;
  }

  &__header {
    display: flex;
    flex-flow: row nowrap;
    justify-content: flex-start;
    align-items: stretch;
    border: solid hsla(0, 0%, 50%, 0.7) $size-thin;
    border-radius: 10px 10px 0 0;
    overflow: hidden;
  }

  &__user {
    position: relative;
    text-align: center;
    background-color: hsla(0, 0%, 0%, 0.7);
    border-right: solid hsla(0, 0%, 50%, 0.7) $size-thin;
    padding: 0.5em;
  }

  &__user-profile {
    display: inline-block;
    width: 160px;
    height: 160px;
    border-radius: 10px;
    margin: 0 auto;
  }

  &__user-name {
    font-size: 1.25em;
    display: inline-block;
  }

  &__info {
    flex: 1 1 auto;
    display: flex;
    flex-flow: column nowrap;
    justify-content: center;
    background-color: var(--colour1-secondary);
    padding: 0.5em;
    padding-left: 2em;

    & > * {
      margin: 0.75rem 0;
    }
  }

  &__title {}

  &__published {
    color: var(--colour0-secondary);
  }

  &__actions {
    font-size: 1.5em;
    

    & > * {
      margin-right: 1em;
      user-select: none;
  
      &:last-child {
        margin-right: 0;
      }
    }
  }

  &__flag {
    display: inline-block;
    color: hsl(3, 100%, 69%);
    font-weight: bold;
    text-shadow: 
    hsl(0, 0%, 0%) 0px 0px 3px, 
    hsl(0, 0%, 0%) -1px -1px 0px, 
    hsl(0, 0%, 0%) 1px 1px 0px;
    background-color: transparent;
    border:transparent;

    // hack to overwrite * selector color
    & span {
      color: hsl(3, 100%, 69%);
    }

    &--flagged {
      color: hsl(0, 0%, 45%);

      // hack to overwrite * selector color
      & span {
        color: hsl(0, 0%, 45%);
      }
    }

    &--loading {
      cursor: progress;

      & .post__flag-icon {
        display: none;
      }
    }
  }

  &__fav {
    color: hsl(0, 0%, 100%);
    font-weight: bold;
    text-shadow: 
    hsl(0, 0%, 0%) 0px 0px 3px, 
    hsl(0, 0%, 0%) -1px -1px 0px, 
    hsl(0, 0%, 0%) 1px 1px 0px;
    background-color: transparent;
    border:transparent;
    
    &--unfav {
      color: var(--favourite-colour1-primary);

      // hack to overwrite * selector color
      & span {
        color: var(--favourite-colour1-primary);
      }
    }

    &--loading {
      cursor: progress;

      & .post__fav-icon {
        display: none;
      }
    }
  }

  &__body {
    border-left: solid hsl(0, 0%, 50%) $size-thin;
    border-right: solid hsl(0, 0%, 50%) $size-thin;
    padding: $size-small;
  }

  &__attachments {
    list-style: none;
    padding: $size-small;
    margin: 0;
  }

  &__attachment {
    padding: $size-little 0;
  }

  &__content {
    margin: 0;
  }

  &__files {
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
  }

  &__thumbnail {
    margin: 0.5em 0;
  }

  &__footer {
    border: solid hsl(0, 0%, 50%) $size-thin;
    border-radius: 0 0 10px 10px;
    padding: $size-small;
  }

  &__comments {

    &--no-comments {
      text-align: center;
    }

    & > * {
      margin-bottom: $size-normal;

      &:last-child {
        margin-bottom: 0;
      }
    }
  }

  @media (max-width: $width-phone) {
    &__header {
      flex-flow: column nowrap;
      align-items: stretch;
    }

    &__info {
      padding-left: 0.5em;
    }

    &__user {
      border-right: none;
      border-bottom: solid hsla(0, 0%, 50%, 0.7) $size-thin;
    }
  }
}

.comment {
  border-radius: 10px;
  border: $size-thin solid var(--colour1-secondary);
  max-width: $width-mobile;

  &:target {
    outline-color: var(--anchour-local-colour1-primary);
    outline-width: $size-thin;
    outline-style: dashed;
  }

  & > * {
    padding: $size-small;
  }

  &--user {
    background-color: var(--colour1-secondary);
    border: none;
  }

  &__header {
    border-bottom: $size-nano solid var(--colour1-secondary);
  }

  &__reply {
    // padding: $size-little 0;
  }

  &__message {
    line-height: 1.5;
    margin: 0;
  }

  &__profile {}

  &__icon {
    display: inline-block;
    border-radius: 5px;
    overflow: hidden;
    width: 1em;
    height: 1em;
  }

  &__name {}

  &__body {}

  &__footer {
    border-top: $size-nano solid var(--colour1-secondary);
  }
}

